Fixed weird gap for dropdown menu. still cannot click options

--- a/comparison-page.css
+++ b/comparison-page.css
@@ -929,7 +929,6 @@
   padding-top: var(--dl-space-space-halfunit);
   padding-left: var(--dl-space-space-unit);
   border-radius: var(--dl-radius-radius-radius2);
-  margin-bottom: 50px;
   padding-right: var(--dl-space-space-unit);
   padding-bottom: var(--dl-space-space-halfunit);
   justify-content: center;
